--- a/css/components/buttons.css
+++ b/css/components/buttons.css
@@ -5,7 +5,8 @@
   color: black;
   font-weight: bold;
   padding: 11px 11px;
-  margin-left: 20px;
+  margin-left: 70px;
+  margin-top: 12px;
   width: 100px;
   border-radius: 10px;
   border: solid white 2px;
