--- a/css/components/cards.css
+++ b/css/components/cards.css
@@ -1,5 +1,5 @@
 .card {
-  background-color: white;
+  background-color: #e7f5f6;
   color: #517074;
   box-shadow: 2px 2px 2px #517074;
   margin: 10px;
